fix(ADS-2328): Java 17 support